01.06.2024 work